[package]
name = "my_rust_project"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }   
log = "0.4"                                       
env_logger = "0.10"                               

[[bin]]
name = "my_rust_project"
#path = "src/hey.rs"
path = "hello.rs"
